# whisperx-web

./: .gitignore  README.md  formatting.py  pipeline.py  pyproject.toml  server.py
audio/: __init__.py  loader.py  sources.py
models/: __init__.py  diarizer.py  whisper_model.py
templates/: index.html
